# OpenEDOS

./: .gitignore  .openedos-complete.bash  CMakeLists.txt  LICENSE  MANIFEST.in  OpenEDOSConfig.h  README.md  open_edos_project.yaml  pyproject.toml  services.h
Examples/Blinky_1/: README.md  main.cpp
Examples/Blinky_1/FreeRTOS/include/: FreeRTOSConfig.h
Examples/Blinky_1/Modules/GPIO_Driver/: gpio_driver_intf.cpp  gpio_driver_intf.h  gpio_driver_mod.cpp  gpio_driver_mod.h
Examples/Blinky_1/Modules/LED_Handler/: led_handler_mod.cpp  led_handler_mod.h
Examples/Blinky_1/Modules/Timer_Driver/: timer_driver_intf.cpp  timer_driver_intf.h  timer_driver_mod.cpp  timer_driver_mod.h
Examples/Blinky_1/OpenEDOS/: OpenEDOSConfig.h  events.h  port.h  services.h
Examples/Blinky_1/OpenEDOS/kernel/: event_map.cpp
Examples/Blinky_1/OpenEDOS/kernel/include/: kernel.h  kernel_switch.h  module.h
Examples/Blinky_1/driverlib/: gpio.c  gpio.h
Examples/Blinky_1/drivers/: rgb.h
Examples/Blinky_1/system/: TM4C123GH6PM.h
Examples/Hello_World/: CMakeLists.txt  Readme.md  hello_world_project.yaml  main.c  oe_all_modules.h
Examples/Hello_World/Modules/OE_Core/: oe_core_intf.c  oe_core_intf.h  oe_core_mod.c  oe_core_mod.h  oe_defines.h  oe_kernel.c  oe_kernel.h  oe_message_queue.c  oe_message_queue.h  oe_request_map.c  oe_request_map.h
Examples/Hello_World/Modules/Printer/: printer_config.yaml  printer_mod.c  printer_mod.h
Examples/Hello_World/Modules/Timer/: timer_config.yaml  timer_intf.c  timer_intf.h  timer_mod.c  timer_mod.h
Examples/Hello_World/OE_Config/: oe_config.h  oe_port.h  oe_requests.h
OE_Config/: oe_config.h  oe_port.h  oe_requests.h
OE_Core/: CMakeLists.txt  oe_core_intf.c  oe_core_intf.h  oe_core_mod.c  oe_core_mod.h  oe_defines.h  oe_kernel.c  oe_kernel.h  oe_message_queue.h  oe_request_map.c  oe_request_map.h
OE_Core/OE_Config/: oe_config.h  oe_port.h  oe_requests.h
OE_Scripts/CMake_Modules/: CMakeLists.txt
OE_Scripts/CMake_Project/: CMakeLists.txt
OE_Systembuilder/: config.py  config_parser.py  firmware.py  interface.py  kernel.py  main.py  message_handlers.py  module.py  project.py  source_files.py  user_code.py  utils.py
OE_Tests/: CMakeLists.txt  CuTest.c  CuTest.h  all_modules.h  main.c  multi_kernel.c  multi_kernel.h  oe_all_modules.h  oe_test.h  oe_tests_project.yaml  single_kernel.c  single_kernel.h
OE_Tests/Modules/: CMakeLists.txt
OE_Tests/Modules/Dummy_0/: dummy_0_config.yaml  dummy_0_intf.c  dummy_0_intf.h  dummy_0_mod.c  dummy_0_mod.h
OE_Tests/Modules/Dummy_1/: dummy_1_config.yaml  dummy_1_intf.c  dummy_1_intf.h  dummy_1_mod.c  dummy_1_mod.h
OE_Tests/Modules/Dummy_2/: dummy_2_config.yaml  dummy_2_intf.c  dummy_2_intf.h  dummy_2_mod.c  dummy_2_mod.h
OE_Tests/Modules/OE_Core/: oe_core_config.yaml
OE_Tests/Modules/Test/: test_config.yaml  test_intf.c  test_intf.h
OE_Tests/Modules/TestDummy/: test_dummy_config.yaml  test_dummy_intf.c  test_dummy_intf.h  test_dummy_mod.c  test_dummy_mod.h
OE_Tests/OE_Config/: oe_config.h  oe_port.h  oe_requests.h
OpenEDOS/: OpenEDOSConfig.h  OpenEDOSConfig.h.template  README.md  events.h  port.h  requests.h
OpenEDOS/kernel/: event_map.cpp  interface.cpp  kernel.c  kernel.cpp  kernel_switch.c  kernel_switch.cpp  message.cpp  message_queue.c  module.cpp  queue.cpp  request_map.c  service_map.cpp
OpenEDOS/kernel/include/: defines.h  interface.h  kernel.h  kernel_switch.h  message.h  message_queue.h  module.h  request_map.h  service_map.h
OpenEDOS_Config/: port.h  requests.h
OpenEDOS_Core/: CMakeLists.txt  OpenEDOSConfig.h  port.h  requests.h
OpenEDOS_Core/kernel/: kernel.c  kernel_switch.c  message_queue.c  request_map.c
OpenEDOS_Core/kernel/include/: defines.h  kernel.h  kernel_switch.h  message_queue.h  request_map.h
OpenEDOS_Core/system_requests/: system_requests_config.yaml  system_requests_intf.c  system_requests_intf.h
OpenEDOS_SoftwareTests/: AllTests.c  AllTests.h  CMakeLists.txt  main.c  multi_kernel.c  single_kernel.c
OpenEDOS_SoftwareTests/Modules/TestDummy/: test_dummy_config.yaml  test_dummy_intf.c  test_dummy_intf.h  test_dummy_mod.c  test_dummy_mod.h
OpenEDOS_SoftwareTests/Modules/system_requests/: system_requests_config.yaml
OpenEDOS_SoftwareTests/OpenEDOS_Config/: OpenEDOSConfig.h  port.h  requests.h
OpenEDOS_SystemBuilder/: .openedos-systembuilder-complete.bash  config.py  config_parser.py  firmware.py  interface.py  kernel.py  main.py  message_handlers.py  module.py  setup.py  source_files.py  user_code.py  utils.py
SoftwareTests/: CMakeLists.txt  multi_kernel.c  open_edos_software_tests_project.yaml  single_kernel.c  single_kernel.h
SoftwareTests/OE_Config/: oe_config.h  oe_port.h  oe_requests.h
Tests/: CMakeLists.txt  main.c  multi_kernel.c  single_kernel.c  tests_project.yaml
Tests/Modules/TestDummy/: test_dummy_config.yaml  test_dummy_intf.c  test_dummy_intf.h  test_dummy_mod.c  test_dummy_mod.h
Tests/Modules/multiKernel_TestDummy_0/: multi_kernel_test_dummy_0_config.yaml  multi_kernel_test_dummy_0_intf.c  multi_kernel_test_dummy_0_intf.h  multi_kernel_test_dummy_0_mod.c  multi_kernel_test_dummy_0_mod.h
Tests/Modules/multiKernel_TestDummy_1/: multi_kernel_test_dummy_1_config.yaml  multi_kernel_test_dummy_1_intf.c  multi_kernel_test_dummy_1_intf.h  multi_kernel_test_dummy_1_mod.c  multi_kernel_test_dummy_1_mod.h
Tests/Modules/multiKernel_TestDummy_2/: multi_kernel_test_dummy_2_config.yaml  multi_kernel_test_dummy_2_intf.c  multi_kernel_test_dummy_2_intf.h  multi_kernel_test_dummy_2_mod.c  multi_kernel_test_dummy_2_mod.h
Tests/Modules/singleKernel_TestDummy/: single_kernel_test_dummy_config.yaml  single_kernel_test_dummy_intf.c  single_kernel_test_dummy_intf.h  single_kernel_test_dummy_mod.h
Tests/OE_Config/: oe_requests.h
kernel/: event_map.cpp  interface.cpp  message.cpp  queue.cpp  service_map.cpp
kernel/include/: defines.h  event_map.h  interface.h  queue.h  service_map.h
kernel/port/: port.h.template  portlist.h
kernel/port/MSP430/: port.h
kernel/port/STM32/: port.h
(+1 files in other folders)
