[build-system]
requires = ["setuptools>=44.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenEDOS"
version = "2.0.0"
description = "A framework for building event-driven microcontroller firmware."
authors = [
    { name = "Samuel Ardaya-Lieb" }
]
license = {file = "LICENSE"}
dependencies = [
    "click",
    "datetime",
    "pyyaml",
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
openedos = "OE_Systembuilder.main:openedos"