[build-system]
requires = ["setuptools>=44.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenEDOS"
version = "2.2"
description = "A framework for building event-driven microcontroller firmware."
authors = [
    { name = "Samuel Ardaya-Lieb" }
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "click",
    "pyyaml",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SamuelArdayaLieb/OpenEDOS"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
openedos = "OE_Systembuilder.main:openedos"